# resyn

./: .gitignore  Cargo.toml  README.md  build.rs
res/: pipewire  resyn.qpwgraph
src/: main.rs  recognition.rs  synthesis.rs
