[package]
name = "resyn"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
cpal = "0.15"
dasp = "0.11"
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.8"
reqwest = { version = "0.11", features = ["blocking"] }
rodio = "0.17"
rtrb = "0.2"
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs.git", rev = "ba0cde2" }
