[package]
name = "resyn"
version = "0.0.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
clap-verbosity-flag = "2.0"
cpal = "0.15"
dasp = "0.11"
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.11", features = ["blocking"] }
rodio = "0.17"
vosk = "0.2"

[build-dependencies]
copy_to_output = "2.1.0"
